Added /entity path
