# api/swagger/swagger.yaml
@@ -20,7 +20,124 @@ produces:
 paths:
   /swagger:
     x-swagger-pipe: swagger_raw
-
+  
+  # Group 1
+  /entities:
+    x-swagger-router-controller: entities
+    get:
+      description: Retruns list of all entities
+      operationId: getAllEntities
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Entity'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Add new entities to DB
+      operationId: addEntities
+      parameters:
+        - name: apiKey
+          in: query
+          description: API key
+          required: true
+          type: string
+        - name: body
+          in: body
+          description: entity data
+          required: true
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/UpdateEntity'
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Entity'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      
+  
+  /entities/{id}:
+    get:  
+      description: Retruns entity with specified ID
+      operationId: getEntityByID
+      parameters:
+        - name: id
+          in: path
+          description: ID of entity
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/Entity'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Update entity
+      operationId: updateEntity
+      parameters:
+        - name: apiKey
+          in: query
+          description: API key
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: ID of entity
+          required: true
+          type: integer
+        - name: body
+          in: body
+          description: entity data
+          required: true
+          schema:
+            $ref: '#/definitions/UpdateEntity'
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/Entity'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: Delete entity
+      operationId: deleteEntity
+      parameters:
+        - name: apiKey
+          in: query
+          description: API key
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: ID of entity
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse" 
+      
 
   # Group 2
   /website:
@@ -80,7 +197,7 @@ paths:
     x-swagger-router-controller: website
     get:
       description: Returns metadata for website with specified ID
-      operationId: getWebsiteWithID
+      operationId: getWebsiteByID
       parameters:
         - name: id
           in: path
@@ -178,7 +295,27 @@ definitions:
     properties:
       message:
         type: string
-        
+  
+  # Group 1
+  Entity:
+    properties:
+      # TODO!!!
+      id: 
+        type: integer
+        format: int32
+      property2: 
+        type: string
+      property3: 
+        type: string  
+  
+  UpdateEntity:
+     properties:
+      # TODO!!!
+      property1: 
+        type: string
+      property2: 
+        type: string
+      
         
   # Group 2
   WebsiteMetadata:
@@ -222,3 +359,5 @@ definitions:
         items:
           type: integer
           format: int32
+          
+  
